k8s notes/Practice/service-prac/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontapp
  labels:
    tier: frontend
spec:
  containers:
    - image: nginx
      name: nginx-container
