k8s notes/Practice/service-prac/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name:  loadbalancer-svc
spec:
  selector: 
    tier: frontend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
