k8s notes/Practice/service-prac/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name:  nodeport-svc
spec:
  selector: 
    tier: frontend
  type: NodePort
  ports:
    - port: 90
      targetPort: 80
      nodePort: 30000
