k8s notes/Practice/service-prac/pathbasedingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pathingressdemo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: example.demo.com
      http:
        paths: 
        - path: /hr
          pathType: Prefix
          backend: 
            service: 
              name: hr-svc
              port:
                number: 80
        - path: /finance
          pathType: Prefix
          backend:
            service: 
              name: finance-svc
              port:
                number: 80
